<resources>
    <string name="app_name">Coder</string>
    <string name="open_project_directory">Choose other directory</string>
    <string name="select_project">Please choose or add a project directory</string>
    <string name="intro_welcome_header">Welcome to Coder!</string>
    <string name="intro_welcome_text">This wizard will help you set up your development environment.</string>
    <string name="intro_permission_header">Permissions</string>
    <string name="intro_permission_text">The app needs your permission to access the devices storage.\nIt is needed for running the local terminal and access to your projects files.</string>
    <string name="intro_permission_give">Give permission</string>
    <string name="intro_terminal_install_header">Terminal</string>
    <string name="intro_terminal_install_text">The terminal will now be installed. Don\'t close the app until this process has finished.</string>
    <string name="intro_terminal_install_text_done">The terminal installation has finished. Please continue!</string>
    <string name="intro_continue">Continue</string>
    <string name="no_file_selected_title">No file selected</string>
    <string name="no_file_selected_description">Choose a file from the tree or create a new file to start editing.</string>

    <string name="create_new_file">New file</string>
    <string name="create_new_directory">New directory</string>
    <string name="file_name">File name</string>
    <string name="directory_name">Directory name</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="new_submenu">New</string>
    <string name="create_file_button">Create</string>
    <string name="cancel_button">Cancel</string>
    <string name="file_creation_error_title">Oops..</string>
    <string name="file_creation_error_description">The file/folder could not be created. \nError message: %s</string>
    <string name="file_already_exists">File does already exist</string>

</resources>